Modernize the classpath package for Java 17
Use pattern matching for instanceof in ClasspathEntry.equals(), in the
classpath element filters, and in the URL/URI/Path/File conversions, convert
the system extension path switch to arrow form, use the diamond operator on
the IdentityHashMap set backings, and replace Paths.get with Path.of and
Collections.emptyList() with List.of().